
- Added support for elimination of boundary conditions in block matrices.

New and updated examples and miniapps
-------------------------------------
- Added a new serial and parallel example (ex19) that solves the quasi-static
  incompressible hyperelastic equations. The example demonstrates the use of
  block nonlinear forms as well as custom block preconditioners.

- Added a new electromagnetics miniapp, Maxwell, for simulating time-domain
  electromagnetics phenomena as a coupled first order system of equations.

- A simple local refinement option has been added to the mesh-explorer miniapp
  (menu option 'r', sub-option 'l') that selects elements for refinement based
  on their spatial location - see the function 'region()' in the source file.

- Added a set of miniapps specifically focused on Isogeometric Analysis (IGA) on
  NURBS meshes in the miniapps/nurbs directory. Currently the directory contains
  variable order NURBS versions of examples 1, 1p and 11p.

- Added PUMI versions of examples ex1, ex1p, ex2 and ex6p in a new examples/pumi
  directory. The new examples demonstrate the PUMI APIs for parallel and serial
  mesh loading (ex1 and ex1p), applying BCs using classification (ex2), and
  performing parallel mesh adaptation (ex6p).

- Added two new miniapps related to DataCollection I/O in miniapps/tools:
  load-dc.cpp can be used to visualize fields saved via DataCollection classes;
  convert-dc.cpp demonstrates how to convert between MFEM's different concrete
  DataCollection options.

- Example 10p with its SUNDIALS and PETSc versions have been updated to reflect
  the change in the behavior of the method ParNonlinearForm::GetLocalGradient()
  (see the "API changes" section) and now works correctly on non-conforming AMR
  meshes. Example 10 and its SUNDIALS version have also been updated to support
  non-conforming ARM meshes.

Miscellaneous
-------------
- Documented project workflow and provided contribution guidelines in the new