@@ -651,7 +651,8 @@ public:
 };
 
 /// Generalized-alpha ODE solver
-/// A Time Integration Algorithm for Structural Dynamics With Improved Numerical Dissipation: The Generalized-α Method
+/// A Time Integration Algorithm for Structural Dynamics With Improved
+/// Numerical Dissipation: The Generalized-α Method
 /// J.Chung and G.M. Hulbert,  J. Appl. Mech 60(2), 371-375, 1993
 /// https://doi.org/10.1115/1.2900803
 /// rho_inf in [0,1]
@@ -695,7 +696,8 @@ public:
 };
 
 /// HHT-alpha ODE solver
-/// Improved numerical dissipation for time integration algorithms in structural dynamics
+/// Improved numerical dissipation for time integration algorithms
+/// in structural dynamics
 /// H.M. Hilber, T.J.R. Hughes and R.L. Taylor 1977
 /// https://doi.org/10.1002/eqe.4290050306
 /// alpha in [2/3,1] --> Defined differently than in paper.
